--- a/css/style.css
+++ b/css/style.css
@@ -138,13 +138,21 @@ li {
 	padding: 10px;
 	background-color: #66ccff;
 }
-.row {
-	text-align: center;
+.row  button {
+	position: center;
 	font-size: 20px;
 	font-weight: bold;
 	color: black;
+	background-color: #66ccff; 
+	margin-left: 100px;
+	
 	
 
+}
+.row button {
+	border:0;
+	padding:0;
+	font-family: inherit;
 }
 
 
