--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 	box-sizing: border-box;
 }
 body {
-	background-color: #d9d9d9;
+	background-color: #e6f2ff;
 
 }
 a{
@@ -11,6 +11,9 @@ a{
 	text-decoration: inherit;
 }
 /* HEADER */
+nav{
+	width: 100%;
+}
 
 h1 {/*Name*/
 	font-size: 2.5em;
@@ -19,7 +22,7 @@ h1 {/*Name*/
 	padding: 0;
 	position: relative;
 	animation-name: title;
-	animation-duration: 20s;
+	animation-duration: 10s;
 
 }
 @keyframes title {
@@ -67,7 +70,6 @@ li {
 	border-radius: 2px;
 	padding: 5px;
 	color: white;
-	background-image: url(../img/medical.jpg) center cover;
 }
 #phone-link a:visited, a:link, a:hover{
 
@@ -156,4 +158,53 @@ li {
 	font-family: inherit;
 }
 
+/***** ROOMS *****/
+#room{
+	text-align: center;
+	
+}
 
+#roomName{
+
+	font-family: 'Yellowtail', cursive;
+	font-size: 45px;
+
+	margin-top: 20px;
+
+	color: black;
+}
+
+#desc{
+	white-space: pre-line;
+	padding: 20px;
+
+	font-family: 'Oswald', sans-serif;
+	font-size: 18px;
+
+	line-height: 28px;
+}
+
+#photo {
+	border: 3px solid white;
+	display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#container2 {
+	text-align: center;
+}
+
+h3{
+	font-family: 'Yellowtail', cursive;
+}
+
+#cost-section{
+	border: 2px solid black;
+	background-color: #66ccff; 
+	margin-bottom: 15px;
+}
+#weekday, #weekend {
+	font-family: 'Oswald', sans-serif;
+
+}
