--- a/css/style.css
+++ b/css/style.css
@@ -137,25 +137,43 @@ li {
 /******end media*****/
 
 .container-fluid {
+
+	margin-right: 0;
 	border:2px solid #404040;
 	padding: 10px;
-	background-color: #66ccff;
+	background-color: white;
 }
-.row  button {
-	position: center;
-	font-size: 20px;
-	font-weight: bold;
-	color: black;
-	background-color: #66ccff; 
-	margin-left: 100px;
-	
-	
+#a-row{
+	padding: 8px;
+	text-align: center;
 
 }
-.row button {
-	border:0;
-	padding:0;
-	font-family: inherit;
+#a-row a {
+
+
+	font-family: 'Merienda One', cursive;
+	font-weight: bold;
+	font-size: 20px;
+
+	transition: 0.2s;
+
+	overflow: hidden;
+
+	color:#66ccff;
+	letter-spacing: 1px;
+
+	text-decoration: none;
+
+	padding: 15px 30px;
+
+
+}
+#a-row a:hover{
+
+	color: white;
+	background: #66ccff;
+	box-shadow: 0 10px 10px #737373, 0 0 40px  #66ccff, 0 20px 80px #66ccff;
+
 }
 
 /***** ROOMS *****/
@@ -192,19 +210,32 @@ li {
 }
 
 #container2 {
+	margin-top: 20px;
 	text-align: center;
+	
 }
 
 h3{
 	font-family: 'Yellowtail', cursive;
 }
 
-#cost-section{
-	border: 2px solid black;
-	background-color: #66ccff; 
-	margin-bottom: 15px;
-}
-#weekday, #weekend {
+#cost-section, #amenities-section{
+	
+	
 	font-family: 'Oswald', sans-serif;
 
+	margin-bottom: 15px;
+	width: 50%;
+    float: left;
+
+}
+
+footer{
+	color: white;
+	text-align: center;
+	background-color: #222;
+	margin-top: 10px;
+	padding-top: 10px;
+	border-top: 0;
+	padding-bottom: 10px;
 }
