--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 }
 body {
 	background-color: #e6f2ff;
+	background: url(../img/soft-wallpaper.jpg) fixed;
 
 }
 a{
@@ -203,7 +204,7 @@ li {
 }
 
 #photo {
-	border: 3px solid white;
+	border: 3px solid black;
 	display: block;
   margin-left: auto;
   margin-right: auto;
@@ -238,4 +239,12 @@ footer{
 	padding-top: 10px;
 	border-top: 0;
 	padding-bottom: 10px;
+}
+@media only screen and (min-width: 992px){
+	  main {
+	  	padding-top: 10px;
+	    max-width: 960px;
+	    margin: 0 auto;
+	    background-color: #fff;
+	}
 }
