--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
 }
 body {
 	background-color: #e6f2ff;
-	background: url(../img/soft-wallpaper.jpg) fixed;
 
 }
 a{
@@ -206,8 +205,8 @@ li {
 #photo {
 	border: 3px solid black;
 	display: block;
-  margin-left: auto;
-  margin-right: auto;
+  	    width: 100%
+
 }
 
 #container2 {
@@ -246,5 +245,9 @@ footer{
 	    max-width: 960px;
 	    margin: 0 auto;
 	    background-color: #fff;
+	}
+	body{
+		background: url(../img/soft-wallpaper.jpg) fixed;
+
 	}
 }
