--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,9 @@ li {
 #button-list a:hover {
 	background-color: #66ccff;
 }/* button end */
-
+#button-list a:active {
+	color: #4d4dff;
+}
 
 #phone-number {
 	font-size: 1.5em;
@@ -83,6 +85,7 @@ li {
 	margin-right: 20px;
 	font-size: 20px;
 	font-weight: bold;
+	font-family: 'Merienda One', cursive;
 		
 }
 /* end phone number */
@@ -175,6 +178,9 @@ li {
 	box-shadow: 0 10px 10px #737373, 0 0 40px  #66ccff, 0 20px 80px #66ccff;
 
 }
+#a-row a:active {
+	color: #4d4dff;
+}
 
 /***** ROOMS *****/
 #room{
@@ -251,3 +257,5 @@ footer{
 
 	}
 }
+
+
