--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 	background-color: #e6f2ff;
 
 }
-a{
+a {
 	cursor: pointer;
 	color: inherit;
 	text-decoration: inherit;
@@ -68,7 +68,7 @@ li {
 	background-color: #ffffff;
 	color: black;
 }
-#button-list a:visited {
+#button-list a:visited, a:active {
 	background-color: #3333ff;
 }
 
@@ -166,7 +166,7 @@ li {
 	font-weight: bold;
 	font-size: 20px;
 
-	transition: 0.9s;
+	transition: 0.8s;
 
 	overflow: hidden;
 
@@ -187,7 +187,7 @@ li {
 #a-row a:active {
 	background-color: #333333;
 }
-#a-row a:visited {
+#a-row a:visited, a:active {
 	background-color: #3333ff;
 }
 
