--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ h1 {/*Name*/
 	position: relative;
 	animation-name: title;
 	animation-duration: 10s;
-	transition: 1s;
+	
 
 }
 @keyframes title {
@@ -33,11 +33,8 @@ h1 {/*Name*/
 	75% {color:  grey; }
 	100%{color: white;}
 
+}
 
-}
-h1:hover {
-	transform: rotate(180deg);
-}
 
 
 #BBF{/* Second Title */
@@ -63,14 +60,12 @@ li {
 
 #button-list a:hover {
 	background-color: #66ccff;
-}/* button end */
-#button-list a:active {
+}
+#button-list a:focus {
 	background-color: #ffffff;
 	color: black;
-}
-#button-list a:visited, a:active {
-	background-color: #3333ff;
-}
+}/* button end */
+
 
 #phone-number {
 	font-size: 1.5em;
@@ -81,12 +76,13 @@ li {
 	padding: 5px;
 	color: white;
 }
-#phone-link a:visited, a:link, a:hover{
-
-	color: white;
+#phone-link  a:visited, a:hover{
+	font-weight: bold;
+	color: black;
 	text-decoration: none;
 
 }
+
 
 #phone-number2{
 	color: white;
@@ -105,7 +101,7 @@ li {
 	}
 	
 /******media*****/
-@media (max-width: 768px){
+@media (max-width: 767px){
 	#phone-number2{
 		display: none;
 	}
@@ -184,12 +180,10 @@ li {
 	box-shadow: 0 10px 10px #737373, 0 0 40px  #66ccff, 0 20px 80px #66ccff;
 
 }
-#a-row a:active {
+#a-row a:active, a:focus {
 	background-color: #333333;
 }
-#a-row a:visited, a:active {
-	background-color: #3333ff;
-}
+
 
 /***** ROOMS *****/
 #room{
