--- a/css/style.css
+++ b/css/style.css
@@ -61,11 +61,15 @@ li {
 #button-list a:hover {
 	background-color: #66ccff;
 }
-#button-list a:focus {
-	background-color: #ffffff;
+#button-list   a:active, a:focus {
+	background-color: white;
 	color: black;
 }/* button end */
 
+a[href^="tel"]::before {
+  content: "📞 ";
+  font-size: 25px;
+}
 
 #phone-number {
 	font-size: 1.5em;
@@ -76,9 +80,9 @@ li {
 	padding: 5px;
 	color: white;
 }
-#phone-link  a:visited, a:hover{
+#phone-number  a:visited, a:hover{
 	font-weight: bold;
-	color: black;
+	color: white;
 	text-decoration: none;
 
 }
@@ -180,7 +184,9 @@ li {
 	box-shadow: 0 10px 10px #737373, 0 0 40px  #66ccff, 0 20px 80px #66ccff;
 
 }
-
+#a-row  a:active {
+	background-color: #333333;
+}
 
 
 /***** ROOMS *****/
